# byte-repr

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs
tests/: byte_repr_test.rs
