[package]
name = "byte-repr"
version = "0.2.0"
edition = "2024"
authors = ["Himangshu Pan <himangshu.blockchain@gmail.com>"]
description = "A utility to inspect binary, little-endian, and big-endian memory representations of numbers."
license = "MIT"
repository = "https://github.com/himangshu-blockchain/byte-repr"
documentation = "https://docs.rs/byte-repr"
readme = "README.md"
keywords = ["binary", "memory", "byte", "representation", "debug"]
categories = ["development-tools::debugging", "data-structures"]
exclude = ["/.github", "/.gitignore"]

[lib]
name = "byte_repr"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "himangshu-blockchain/byte-repr" }